--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,9 @@ org.gradle.configuration-cache=false
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.10
-loader_version=0.17.3
-loom_version=1.12-SNAPSHOT
+minecraft_version=1.21.1
+loader_version=0.18.1
+loom_version=1.13-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
@@ -17,4 +17,6 @@ maven_group=is.pig.minecraft
 archives_base_name=piggy-lib
 
 # Dependencies
-fabric_version=0.136.0+1.21.10
+fabric_version=0.116.7+1.21.1
+yacl_version=3.6.1+1.21-fabric
+modmenu_version=11.0.3
